examples/good/04-print.elina
fn main(): void {
  printInt(13);
  printBool(true);
  printString("Hello, world!");
}