examples/bad/multiple-arguments-print.elina
fn main(): void {
  printInt(21, 37);
}